src/test/deca/context/invalid/created/binary_exp/op_comp/eq_int_null.deca
// Description :
//    test eq entre un int et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type int, null, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)


{
int a;
boolean c = a == null;
}
